--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .main-nav-item {
+    @apply inline-block rounded-lg px-2 py-1 text-sm text-slate-700 hover:bg-slate-100 hover:text-slate-900;
+  }
+  .main-nav-item.active {
+    @apply text-slate-900 bg-slate-100;
+  }
+}
+
+.st0 {
+  fill: #2563eb;
+}
